Fix: multiple decimal-exponent bug, Add: change font, color

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -23,7 +23,7 @@
     <data android:mimeType="*/*" />
   </intent>
 </queries>
-
+   <uses-permission android:name="android.permission.INTERNET" />
    <application
         android:label="Calculator"
         android:name="${applicationName}"
