--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,7 +49,7 @@ dev_dependencies:
 flutter_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "images/calc.png"
+  image_path: "images/calcLogo.png"
   adaptive_icon_foreground: "images/logo_foreground.png"
   adaptive_icon_background: "#ffffff"
 
@@ -59,11 +59,7 @@ flutter_native_splash:
   image: images\calc.png
   android: true
   ios: true
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
+  
   flutter_lints: ^2.0.0
 
 # For information on the generic Dart part of this file, see the
@@ -72,12 +68,7 @@ flutter_native_splash:
 # The following section is specific to Flutter packages.
 flutter:
 
-  # The following line ensures that the Material Icons font is
-  # included with your application, so that you can use the icons in
-  # the material Icons class.
   uses-material-design: true
-
-  # To add assets to your application, add an assets section, like this:
   assets:
     - images/
   #   - images/a_dot_ham.jpeg
