--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,7 @@ flutter_icons:
   android: "launcher_icon"
   ios: true
   image_path: "images/calcLogo.png"
+  # make adaptive foreground from https://icon.kitchen
   adaptive_icon_foreground: "images/logo_foreground.png"
   adaptive_icon_background: "#ffffff"
 
