--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 1.0.0+1
+version: 1.0.5+6
 
 environment:
   sdk: ">=2.17.6 <3.0.0"
@@ -29,22 +29,23 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  flutter_native_splash: ^1.3.3
+  flutter_native_splash: ^2.4.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
-  google_fonts: ^3.0.1
-  math_expressions: ^2.3.1
-  url_launcher: ^6.0.18
-  share_plus: ^6.3.0
-  fluttertoast: ^8.1.2
-  shared_preferences: ^2.0.17
+  cupertino_icons: ^1.0.8
+  google_fonts: ^6.2.1
+  math_expressions: ^2.6.0
+  url_launcher: ^6.3.0
+  share_plus: ^10.0.2
+  fluttertoast: ^8.2.8
+  shared_preferences: ^2.3.2
+  in_app_update: ^4.2.3
   
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  flutter_launcher_icons: "^0.11.0"
+  flutter_launcher_icons: "^0.13.1"
 
 # flutter pub get && flutter pub run flutter_launcher_icons:main
 flutter_icons:
